data/derived/sp14/progs/unify/prog2330.ml.out
Characters 69-88:
  | h :: t ->  fold_l f base t f h;;
               ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'c -> 'a
       The type variable 'a occurs inside 'b -> 'c -> 'a
